test/functions/varargs/varargsBadAccess.good
varargsBadAccess.chpl:2: In function 'myPrintln':
varargsBadAccess.chpl:7: error: cannot assign to const variable
  varargsBadAccess.chpl:12: called as myPrintln(args(0): int(64), args(1): real(64), args(2): string)
